--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,14 @@ dependencies {
     compile 'com.eclipsesource.j2v8:j2v8_linux_x86_64:4.8.0'
     // compile 'com.eclipsesource.j2v8:j2v8_macosx_x86_64:4.6.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    
-    
-	testCompile 'junit:junit:4.11'
+
+    compile 'com.fasterxml.jackson.core:jackson-core:2.8.9'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.9'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.9'
+
+
+
+    testCompile 'junit:junit:4.11'
 	testCompile project(path: ':refdiff-core', configuration: 'testArtifacts')
 }
 
